Deleted storyboards and shows number of people joined (not really).

--- a/Avalon Assistant/Base.lproj/Main.storyboard
+++ b/Avalon Assistant/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,51 +10,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Sign In View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--View Controller-->
+        <scene sceneID="5Mu-Xo-7Wg">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SignInViewController" customModule="Avalon_Assistant" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController storyboardIdentifier="StartGame" id="bmV-BD-9lB" customClass="ViewController" customModule="Avalon_Assistant" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ekm-f5-KIn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's your name?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFj-A1-WZo">
-                                <rect key="frame" x="114" y="333" width="147" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wsb-IX-hsc">
-                                <rect key="frame" x="175" y="381" width="25" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fH9-8e-kd0">
-                                <rect key="frame" x="169" y="442" width="36" height="30"/>
-                                <state key="normal" title="Send"/>
-                                <connections>
-                                    <action selector="sendNameButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g2T-Az-9hz"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="dFj-A1-WZo" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="3Ol-SE-U8A"/>
-                            <constraint firstItem="dFj-A1-WZo" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6gj-HQ-eDo"/>
-                            <constraint firstItem="wsb-IX-hsc" firstAttribute="top" secondItem="dFj-A1-WZo" secondAttribute="bottom" constant="27" id="ATZ-UT-fSd"/>
-                            <constraint firstItem="fH9-8e-kd0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="W18-4f-BzB"/>
-                            <constraint firstItem="wsb-IX-hsc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="aNw-8y-8BB"/>
-                            <constraint firstItem="fH9-8e-kd0" firstAttribute="top" secondItem="wsb-IX-hsc" secondAttribute="bottom" constant="31" id="ePa-n7-niZ"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Waw-do-Vc0"/>
                     </view>
-                    <connections>
-                        <outlet property="nameField" destination="wsb-IX-hsc" id="oG8-fV-H7k"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bYm-qk-RN0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="874" y="32"/>
         </scene>
     </scenes>
 </document>
